--- a/MyTabLayout_find_20171004/app/src/main/res/layout/fragment_estimation.xml
+++ b/MyTabLayout_find_20171004/app/src/main/res/layout/fragment_estimation.xml
@@ -89,4 +89,24 @@
 
     </RelativeLayout>
 
+    <SeekBar
+        android:id="@+id/estimationBar"
+        style="@style/Widget.AppCompat.SeekBar"
+        android:thumb="@drawable/pin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:max="5"
+        android:progress="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.673" />
+
 </android.support.constraint.ConstraintLayout>
