pin이미지에 흰색부분 투명으로 만들음. pin위치 바뀔때마다 로고밑 점수바에 적용되게만듬.

--- a/MyTabLayout_find_20171004/app/src/main/res/layout/fragment_estimation.xml
+++ b/MyTabLayout_find_20171004/app/src/main/res/layout/fragment_estimation.xml
@@ -79,6 +79,7 @@
             tools:layout_editor_absoluteY="39dp" />
 
         <ImageView
+            android:id="@+id/score_bar"
             android:layout_width="328dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
