--- a/MyTabLayout_find_20171004/app/src/main/res/values/colors.xml
+++ b/MyTabLayout_find_20171004/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="text_color_white">#FFF</color>
 </resources>
