--- a/MyTabLayout_find_20171004/app/src/main/res/values/dimens.xml
+++ b/MyTabLayout_find_20171004/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+
+    <dimen name="spacing_large2">28dp</dimen>
+    <dimen name="text_size_medium2">19sp</dimen>
 </resources>
